# insta_kendou

./: LICENSE  MANIFEST.in  README.md  example.py  exemple.py  ig_device.json  pyproject.toml  setup.py  t.py
build_tools/: build.sh  obfuscate.py
insta_kendou/: client.py  client1.py  client2.py
insta_kendou.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
insta_kendou/auth/: alternative_2fa.py  authentication.py  blocks_2fa.py  bloks_2fa.py  challenge_handler.py  classic_2fa.py
insta_kendou/exceptions/: __init__.py  errors.py
insta_kendou/utils/: __init__.py  device.py  encryption.py  license.py  media.py  url_resolver.py  url_resolver1.py
sessions/: felicien09095bab_ig_complete.json  ken562612a_ig_complete.json  ken562615a_ig_complete.json
