[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta_kendou"
version = "1.0.0"
description = "Bibliothèque Instagram complète avec authentification 2FA"
authors = [{name = "Kenny", Telegram = "https://t.me/kenny5626"}]
license = {text = "Proprietary"}
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0", 
    "pycryptodome>=3.15.0",
    "PyNaCl>=1.5.0"
]
